# agent-runtime

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
agent_runtime/: __init__.py  __main__.py  agent_admin.py  agent_cmd.py  agent_pending.py  alert_cmd.py  alert_judge.py  alert_kb.py  alert_resolver.py  alert_retriever.py  approval.py  claude_proc.py  concurrency.py  config.py  config_writer.py  decay.py  dedup.py  health.py  help_cmd.py  lesson.py  lesson_distill.py  logging.py  observability.py  push.py  repo_sync.py  routing.py  scheduler.py  session.py  stream_card_metrics.py  template_render.py  timezone.py  verifier.py
agent_runtime/channels/: __init__.py  registry.py
agent_runtime/tests/: conftest.py  test_agent_admin.py  test_agent_admin_project.py  test_agent_cmd.py  test_agent_cmd_project.py  test_agent_pending.py  test_alert_cmd.py  test_alert_judge.py  test_alert_kb.py  test_alert_resolver.py  test_alert_resolver_timing.py  test_alert_retriever.py  test_approval.py  test_claude_proc.py  test_claude_proc_env.py  test_concurrency.py  test_config.py  (+39 more)
prompts/: REGISTRY.md
scripts/: agent-runtime.service  backup-wiki.sh  bootstrap.sh  check-health.sh  com.agent-runtime.backup.plist  com.agent-runtime.ingest-feishu.plist  com.agent-runtime.plist  compile-wiki-precheck.sh  compile_wiki.py  e2e_self_test.py  guard-wiki-write.sh  ingest_feishu.sh  install-cron.sh  install-service.sh  install-systemd.sh  install-timers-macos.sh  push_auth_request.sh  run.sh  sync-repos.sh  token_usage_report.py  uninstall-service.sh
(+37 files in other folders)
