[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "An IM-channel digital agent runtime: turn-by-turn scheduler, Claude CLI backend, verification loop, and pluggable channels"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"  # asyncio.timeout() used by claude_proc.run_stream
dependencies = [
    "pyyaml>=6.0",
    # ruamel.yaml roundtrip preserves comments + key order so the config
    # writer can edit config.yaml without flattening it.
    "ruamel.yaml>=0.18",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-semantic-conventions>=0.48b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21", "pytest-timeout>=2.0"]

[project.scripts]
agent-runtime = "agent_runtime.scheduler:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_runtime*"]

[tool.setuptools.package-data]
# fleet-mcp.json ships next to claude_proc.py and is resolved module-relative.
agent_runtime = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["agent_runtime/tests"]
asyncio_mode = "auto"
